test/classes/diten/breakList.good
3.0 4.0
breakList.chpl:7: error: halt reached - I Got you!
